# app/Http/Controllers/EnumController.php
@@ -6,6 +6,7 @@ use App\Enums\AppointmentTypeEnum;
 use App\Enums\ProfessionalTypeEnum;
 use App\Enums\ServiceTypeEnum;
 use App\Enums\VisitFormatEnum;
+use App\Http\Requests\Service\GetServicesRequest;
 use App\Http\Resources\GenericEnumResource;
 use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 
@@ -39,5 +40,31 @@ class EnumController extends Controller
     public function getProfessionalTypes()
     {
         return GenericEnumResource::collection(ProfessionalTypeEnum::cases());
+    }
+
+    /**
+     * Get list of service types
+     *
+     * @operationId getServiceTypes
+     */
+    public function getServiceTypes(GetServicesRequest $request)
+    {
+        $format = $request->input('visit_type');
+
+        $allowed = match ($format) {
+            VisitFormatEnum::TELEMEDICINE->value => [
+                ServiceTypeEnum::CONSULTATION,
+                ServiceTypeEnum::THERAPY,
+            ],
+            VisitFormatEnum::IN_PERSON->value => [
+                ServiceTypeEnum::CONSULTATION,
+                ServiceTypeEnum::DIAGNOSTICS,
+                ServiceTypeEnum::PROCEDURE,
+                ServiceTypeEnum::THERAPY,
+                ServiceTypeEnum::SURGERY,
+            ],
+            default => ServiceTypeEnum::cases(),
+        };
+        return GenericEnumResource::collection($allowed);
     }
 }
